raw/AGNESIA TATONTOS FEVOURA 6427 245150207111058/2024-11-14-08-00-58.ceg/compilation.txt
NT.java:23: error: illegal start of expression
static void double akhir(Double tambah, Double kurang, Double kali, Double bagi)    
^
NT.java:23: error: <identifier> expected
static void double akhir(Double tambah, Double kurang, Double kali, Double bagi)    
           ^
NT.java:23: error: '(' expected
static void double akhir(Double tambah, Double kurang, Double kali, Double bagi)    
            ^
NT.java:23: error: ';' expected
static void double akhir(Double tambah, Double kurang, Double kali, Double bagi)    
                                                                                ^
NT.java:27: error: invalid method declaration; return type required
        kurang(input[2]);
        ^
NT.java:27: error: ']' expected
        kurang(input[2]);
                     ^
NT.java:28: error: invalid method declaration; return type required
        kali(input[3]);
        ^
NT.java:28: error: ']' expected
        kali(input[3]);
                   ^
NT.java:29: error: invalid method declaration; return type required
        bagi(input[4]);
        ^
NT.java:29: error: ']' expected
        bagi(input[4]);
                   ^
NT.java:30: error: invalid method declaration; return type required
        output(akhir());
        ^
NT.java:30: error: <identifier> expected
        output(akhir());
                    ^
NT.java:32: error: class, interface, enum, or record expected
}
^
13 errors
Not compiled
